--- a/templates/index.html
+++ b/templates/index.html
@@ -434,6 +434,7 @@
                 for (let i = 0; i < edges.length; i++) {
                     edges[i]['status'] = 0;
                 }
+                console.log('nodes', nodes)
 
                 rangeSlider = document.getElementById("range-slider");
                 rangeLabel = document.getElementById("range-label");
