--- a/templates/front.html
+++ b/templates/front.html
@@ -4,7 +4,7 @@
 		<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-9FR7K2YVNR"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-9FR7K2YVNR'); </script>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Front Page</title>
+		<title>GeneticFlow</title>
         <link rel="icon" href="/src/image/favicon.ico" type="image/x-icon"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 		<!-- Bootstrap core CSS -->
@@ -20,6 +20,14 @@
 			<a href="/"><img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="390" height="140.4"></a>
 			<br />
             <div style="display: inline;">
+				<a id="databaseLink" class="custom-button" href="search?field=database">
+                    <i class="fa-solid fa-database"></i>
+                    Database&Data Science
+                </a>
+				<a id="VCGLink" class="custom-button" href="search?field=VCG">
+                    <i class="fa-brands fa-codepen"></i>
+                    Graphics&Visualization
+                </a>
 				<a id="NLPLink" class="custom-button" href="search?field=acl" style="margin-left: 30px;">
                     <i class="fa-solid fa-pencil icon"></i>
                     NLP
@@ -28,10 +36,6 @@
 				<a id="visualizationLink" class="custom-button" href="search?field=visualization">
                     <i class="fas fa-eye icon"></i>
                     Visualization
-                </a>
-				<a id="databaseLink" class="custom-button" href="search?field=database">
-                    <i class="fa-solid fa-database"></i>
-                    Database/Data Science
                 </a>
 			</div>
 			<br />
