--- a/templates/list.html
+++ b/templates/list.html
@@ -126,7 +126,8 @@
             const fieldDict = {
 				acl: "NLP",
 				visualization: "Visualization",
-				database: "Database"
+				database: "Database/Data Science",
+				VCG: "Graphics/Visualization"
 			};
             itemsPerPage = 1000;    // 每页显示的数据数量
             scholarList = {{ scholarList|safe }};
