--- a/templates/degree.html
+++ b/templates/degree.html
@@ -10,6 +10,9 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
 
     <style>
+        body {
+            font-size: 14px;
+        }
         #container {
             display: flex;
         }
@@ -32,7 +35,6 @@
 
         #authorTable {
             width: 34%;
-            margin-right: 2%;
             border-collapse: collapse;
         }
 
@@ -47,7 +49,7 @@
         }
 
         #authorTable tbody {
-            max-height: 1250px;  /* Adjust this value as per your requirement */
+            max-height: 1100px;  /* Adjust this value as per your requirement */
             overflow-y: auto;
         }
 
@@ -81,25 +83,19 @@
             width: 20%;
         }
 
-        #graphs {
-            width: 40%;
+        #graphs, #graphs-r {
+            width: 32%;
+            margin-left: 2%;
         }
 
         #indegree, #outdegree, #totaldegree {
-            width: 600px;
-            height: 350px;
+            width: 100%;
+            height: 300px;
         }
 
         #indegree-r, #outdegree-r, #totaldegree-r {
-            width: 600px;
-            height: 350px;
-        }
-
-        .title {
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            text-align: center;
+            width: 100%;
+            height: 300px;
         }
 
         .loading-overlay {
@@ -155,7 +151,7 @@
             margin-bottom: 15px;
             padding: 10px;
             line-height: 24px;
-            max-width: 600px;
+            max-width: 500px;
         }
     </style>
 </head>
